This section will only be displayed if the Micro-Missions plugin is activated.

This plugin is made to work on top of b_extended_profile, version 1.0.

--------------------------------------------------------------------------------------------------------------

This plugin code is copied from 3 of the original files and then modified.
These modified version overrode the originals.

The filepaths of these modified files are as follows:
mod/missions_profile_extend/actions/b_extended_profile/edit_profile.php
mod/missions_profile_extend/js/endorsements/gcconnex-profile.js
mod/missions_profile_extend/views/default/profile/wrapper.php

All modified code is between MODIFIED CODE and END MODIFIED CODE comments.

--------------------------------------------------------------------------------------------------------------

This plugin has two additional views in order to display the opt-in section.
mod/missions_profile_extend/views/default/b_extended_profile/edit_opt-in.php
mod/missions_profile_extend/views/default/b_extended_profile/opt-in.php

This plugin has another additional view to display the completed Micro-Missions section.
mod/missions_profile_extend/view/default/missions/completed-missions.php
The completed Micro-Missions panel can now be hidden by the owner selecting different access privileges.
Individual Micro-Missions may also be hidden from the list or re-displayed after being hidden.

--------------------------------------------------------------------------------------------------------------

This plugin stores the opt-in data as a metadata strings.
$user->opt_in_missions
$user->opt_in_swap
$user->opt_in_mentored
$user->opt_in_mentoring
$user->opt_in_shadowed
$user->opt_in_shadowing
$user->opt_in_peer_coached
$user->opt_in_peer_coaching

Values stored in metastrings are:
'gcconnex_profile:opt:yes' if the user is opted-in.
'gcconnex_profile:opt:no' if the user opted-out.