@@ -1,24 +1,27 @@
 <?php
 return array(
 	// labels
-		'gcconnex_profile:opt:opt-in' => 'Opt In',
-		'gcconnex_profile:opt:set_empty' => 'No opt-in options were selected.',
-		'gcconnex_profile:opt:micro_mission' => 'Micro-Mission',
-		'gcconnex_profile:opt:job_swap' => 'Job Swap',
-		'gcconnex_profile:opt:mentored' => 'Mentored',
-		'gcconnex_profile:opt:mentoring' => 'Mentoring',
-		'gcconnex_profile:opt:shadowed' => 'Shadowed',
-		'gcconnex_profile:opt:shadowing' => 'Shadowing',
-		'gcconnex_profile:opt:peer_coached' => 'Peer Coached',
-		'gcconnex_profile:opt:peer_coaching' => 'Peer Coaching',
-		'gcconnex_profile:opt:opt_in_access' => 'Who can see my opt-in choices: ',
-		'gcconnex_profile:opt:yes' => 'Yes',
-		'gcconnex_profile:opt:no' => 'No',
-		'gcconnex_profile:completed_missions' => 'Completed Micro-Missions',
-		'gcconnex_profile:opt:skill_sharing' => 'Skill Sharing',
-		'gcconnex_profile:opt:job_sharing' => 'Job Sharing',
-		'gcconnex_profile:opportunities' => 'Opportunities',
+		"gcconnex_profile:opt:opt-in" => "Opt In",
+		"gcconnex_profile:opt:set_empty" => "No opt-in options were selected.",
+		"gcconnex_profile:opt:micro_mission" => "Micro-Mission",
+		"gcconnex_profile:opt:job_swap" => "Job Swap",
+		"gcconnex_profile:opt:mentored" => "Mentored",
+		"gcconnex_profile:opt:mentoring" => "Mentoring",
+		"gcconnex_profile:opt:shadowed" => "Shadowed",
+		"gcconnex_profile:opt:shadowing" => "Shadowing",
+		"gcconnex_profile:opt:peer_coached" => "Peer Coached",
+		"gcconnex_profile:opt:peer_coaching" => "Peer Coaching",
+		"gcconnex_profile:opt:opt_in_access" => "Who can see my opt-in choices: ",
+		"gcconnex_profile:opt:yes" => "Yes",
+		"gcconnex_profile:opt:no" => "No",
+		"gcconnex_profile:completed_missions" => "Completed Career ConneXions Opportunities",
+		"gcconnex_profile:opt:skill_sharing" => "Skill Sharing",
+		"gcconnex_profile:opt:job_sharing" => "Job Sharing",
+		
+		// SEPARATION
+		
+		"gcconnex_profile:opportunities" => "Opportunities",
 		"gcconnex_profile:hide" => "Hide",
-		"gcconnex_profile:confirm:hide" => "Hiding this Micro-Mission means that it will no longer appear under Opportunities in your profile and this operation cannot be reversed.",
+		"gcconnex_profile:confirm:hide" => "Hiding this Micro-Mission means that it will no longer appear under 'Completed Career ConneXions Opportunities' in your profile and this operation cannot be reversed.",
 		"gcconnex_profile:show" => "Show"
 );
