@@ -1,24 +1,27 @@
 <?php
 return array(
 	// labels
-		'gcconnex_profile:opt:opt-in' => "S'Engager",
-		'gcconnex_profile:opt:set_empty' => "Aucune option d'engagement ont été sélectionnés.",
-		'gcconnex_profile:opt:micro_mission' => 'Micro-Mission',
-		'gcconnex_profile:opt:job_swap' => "Échange d'emploi",
-		'gcconnex_profile:opt:mentored' => 'Encadrés',
-		'gcconnex_profile:opt:mentoring' => 'Mentorat',
-		'gcconnex_profile:opt:shadowed' => 'Observé',
-		'gcconnex_profile:opt:shadowing' => 'Observateur',
-		'gcconnex_profile:opt:peer_coached' => 'Pair entraîné',
-		'gcconnex_profile:opt:peer_coaching' => 'Pair entraineur',
-		'gcconnex_profile:opt:opt_in_access' => "Qui peut voir mes choix d'engagement :",
-		'gcconnex_profile:opt:yes' => 'Oui',
-		'gcconnex_profile:opt:no' => 'Non',
-		'gcconnex_profile:completed_missions' => 'Micro-Missions accomplies',
-		'gcconnex_profile:opt:skill_sharing' => 'Partage des compétences',
-		'gcconnex_profile:opt:job_sharing' => "Partage d'emploi",
-		'gcconnex_profile:opportunities' => 'Opportunités',
+		"gcconnex_profile:opt:opt-in" => "S'inscrire",
+		"gcconnex_profile:opt:set_empty" => "Aucune option ont été sélectionnés.",
+		"gcconnex_profile:opt:micro_mission" => "Micro-Mission",
+		"gcconnex_profile:opt:job_swap" => "Échange d'emploi",
+		"gcconnex_profile:opt:mentored" => "Mentoré",
+		"gcconnex_profile:opt:mentoring" => "Mentor",
+		"gcconnex_profile:opt:shadowed" => "Observé",
+		"gcconnex_profile:opt:shadowing" => "Observateur",
+		"gcconnex_profile:opt:peer_coached" => "Pair entraîné",
+		"gcconnex_profile:opt:peer_coaching" => "Pair entraineur",
+		"gcconnex_profile:opt:opt_in_access" => "Qui peut voir mes choix d'inscription :",
+		"gcconnex_profile:opt:yes"=> "Oui",
+		"gcconnex_profile:opt:no" => "Non",
+		"gcconnex_profile:completed_missions" => "Possibilités complètés grâce à la plateforme de ConneXions carrière",
+		"gcconnex_profile:opt:skill_sharing" => "Partage des habiletés",
+		"gcconnex_profile:opt:job_sharing" => "Partage d'emploi",
+		
+		// SEPARATION
+		
+		"gcconnex_profile:opportunities" => "Opportunités",
 		"gcconnex_profile:hide" => "Cacher",
-		"gcconnex_profile:confirm:hide" => "Cacher ce Micro-Mission signifie qu'il ne sera plus visible sous Opportunités dans votre profil et cette opération ne peut pas être inversée.",
+		"gcconnex_profile:confirm:hide" => "Cacher ce Micro-Mission signifie qu'il ne sera plus visible sous 'Possibilités complètés grâce à la plateforme de ConneXions carrière' dans votre profil et cette opération ne peut pas être inversée.",
 		"gcconnex_profile:show" => "Montrer"
 );
